--- a/Heaventure/Views/Web.config
+++ b/Heaventure/Views/Web.config
@@ -17,6 +17,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
+        <add namespace="SmartFormat"/>
         <add namespace="Heaventure" />
         <add namespace="Resources"/>
       </namespaces>
