Refactor: removing Resources class library project and adding resource files directly in main web project

--- a/Heaventure/Views/Web.config
+++ b/Heaventure/Views/Web.config
@@ -19,7 +19,7 @@
         <add namespace="System.Web.Routing" />
         <add namespace="SmartFormat"/>
         <add namespace="Heaventure" />
-        <add namespace="Resources"/>
+        <add namespace="Heaventure.Resources"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
